<resources>
  <string name="action_next">Next</string>
  <string name="action_pause">Pause</string>
  <string name="action_play">Play</string>
  <string name="action_previous">Previous</string>
  <string name="action_retry">Retry</string>
  <string name="album_tracks__cover_content">The cover of the album</string>
  <string name="album_tracks__play">Play Album</string>
  <string name="album_tracks__play__content_description">Plays all the tracks</string>
  <string name="albums_list_empty">No albums found</string>
  <string name="alert_invalid_port_number">The valid port range is from 1 to 65535</string>
  <string name="application_description">Remote Control Application for MusicBee</string>
  <string name="application_name">MusicBee Remote</string>
  <string name="application_starting">Attempting to establish connection…</string>
  <string name="artist_placeholder">Artistname</string>
  <string name="artists_list_empty">No artists found</string>
  <string name="common_add">Add</string>
  <string name="common_edit">Edit</string>
  <string name="common_empty_no_tracks">No tracks found</string>
  <string name="common_feedback">Feedback</string>
  <string name="common_number">%d</string>
  <string name="con_man_no_wifi">This service is available only on a wifi connection</string>
  <string name="con_man_not_found">A remote service could not be found</string>
  <string name="con_man_success">Service successfully found</string>
  <string name="connect_button_description">Connect Button</string>
  <string name="connection_default_description">Represents if this connection is the default selected connection</string>
  <string name="connection_error_all_retries_exhausted">Unable to connect after multiple attempts. Please check your connection settings.</string>
  <string name="connection_error_authentication_failed">Authentication failed. The client is not allowed to connect.</string>
  <string name="connection_error_network_unavailable">Network is unreachable. Please check your network connection.</string>
  <string name="connection_error_refused">Connection was refused by the plugin. Please verify the plugin is running and accessible.</string>
  <string name="connection_error_server_not_found">Unable to find the MusicBee plugin. Please check the connection settings.</string>
  <string name="connection_error_timeout">Connection timed out. Please check your network connection and try again.</string>
  <string name="connection_error_unknown">Connection failed: %1$s</string>
  <string name="connection_error_unsupported_protocol">Protocol version is not supported. Please update your plugin or app.</string>
  <string name="connection_manager_scan">SCAN</string>
  <string name="connection_manager_title">Connection Manager</string>
  <string name="connectivity_manager_default">Set default</string>
  <string name="connectivity_manager_delete">Delete</string>
  <string name="content_description__empty_warning">Warning sign showing that there are no entries</string>
  <string name="content_description__speaker_icon">Represents an audio output device</string>
  <string name="dash">-</string>
  <string name="default_port">3000</string>
  <string name="description_album_cover">It displays the album cover for the current track.</string>
  <string name="description_computer_icon">Computer icon</string>
  <string name="drag_n_drop_description">Used as an anchor for drag and drop</string>
  <string name="drawer_close">Close navigation drawer</string>
  <string name="drawer_connection_status_active">Connected</string>
  <string name="drawer_connection_status_off">Offline</string>
  <string name="drawer_connection_status_on">Authenticating</string>
  <string name="drawer_open">Open navigation drawer</string>
  <string name="drawer_connection_not_connected">Not connected</string>
  <string name="drawer_section_music">MUSIC</string>
  <string name="drawer_version">Version %1$s</string>
  <string name="empty">[Empty]</string>
  <string name="feedback_button_text">Send Feedback</string>
  <string name="feedback_chooser_title">Send feedback using…</string>
  <string name="feedback_device_information"><![CDATA[Include Device & Application Information]]></string>
  <string name="feedback_logs">Include Logs</string>
  <string name="feedback_subject">MusicBeeRemote InApp Feedback</string>
  <string name="feedback_title">How you feel about the application?</string>
  <string name="feedback_version_info">\n\nDevice: %1$s %2$s Android(%3$s)\nMusicBee Remote v%4$s</string>
  <string name="genres_list_empty">No genres found</string>
  <string name="incoming_action_default_value">none</string>
  <string name="info_service_description">This service is responsible for the communication of the application with the plugin.</string>
  <string name="lastfm_love">Love</string>
  <string name="lastfm_scrobble">Last.fm Scrobbling</string>
  <string name="library__sync_complete">Sync completed successfully. %1$s , %2$s, %3$s, %4$s and %5$s are available.</string>
  <string name="library__sync_complete_title">Sync complete</string>
  <string name="library__sync_failed">The library metadata sync was incomplete or failed completely. This might result in queueing not working properly..</string>
  <string name="library__sync_progress">Syncing %1$d of %2$d %3$s</string>
  <string name="library_actionbar_refresh">Refresh</string>
  <string name="library_album_artists_only">Only Album Artists</string>
  <string name="library_menu__sync_state">Library Sync State</string>
  <string name="library_search_hint">Search your library</string>
  <string name="library_search_subtitle">Displaying results for search</string>
  <string name="library_stats__description">The following metadata entries are currently available to MusicBee Remote:</string>
  <string name="library_stats__title">Library Sync Information</string>
  <string name="library_sync_in_progress">Library metadata sync in progress, please wait…</string>
  <string name="main__dialog_plugin_outdated_message">A newer version of the plugin is available.\nPlease consider updating.</string>
  <string name="main_button_mute_description">When pressed it toggles the volume mute.</string>
  <string name="main_button_next_description">When pressed it plays the next track.</string>
  <string name="main_button_play_pause_description">When pressed either it starts playing a track or pauses it if it is already playing. </string>
  <string name="main_button_previous_description">When pressed it plays the previous track</string>
  <string name="main_button_repeat_description">When pressed it changes the repeat (all/none).</string>
  <string name="main_button_shuffle_description">When pressed it changes the shuffle mode (on/off).</string>
  <string name="main_label_duration_current">01:03</string>
  <string name="main_label_duration_total">04:11</string>
  <string name="main_menu_title_share">Share</string>
  <string name="media__albums">Albums</string>
  <string name="media__artists">Artists</string>
  <string name="media__covers">Covers</string>
  <string name="media__genres">Genres</string>
  <string name="media__playlists">Playlists</string>
  <string name="media__tracks">Tracks</string>
  <string name="menu_album_tracks">Get Album Tracks</string>
  <string name="menu_artist_albums">Get Albums</string>
  <string name="menu_genre_artists">Get Artists</string>
  <string name="menu_overflow_description">More options</string>
  <string name="menu_play">Play Now</string>
  <string name="menu_play_album">Play Now (Album)</string>
  <string name="menu_play_artist">Play Now (Artist)</string>
  <string name="menu_play_queue_all">Play Now (Queue All)</string>
  <string name="menu_queue_last">Queue Last</string>
  <string name="menu_queue_next">Queue Next</string>
  <string name="nav_queue">Queue</string>
  <string name="musicbee_remote_license_title">MusicBee Remote license</string>
  <string name="nav_exit">Exit</string>
  <string name="nav_help">Help &amp; Feedback</string>
  <string name="nav_home">Home</string>
  <string name="nav_library">Library</string>
  <string name="nav_lyrics">Lyrics</string>
  <string name="nav_now_playing">Now playing</string>
  <string name="nav_option_title">Options</string>
  <string name="nav_output">Output</string>
  <string name="nav_playlists">@string/media__playlists</string>
  <string name="nav_radio">Radio</string>
  <string name="nav_connections">Connections</string>
  <string name="common_settings">Settings</string>
  <string name="no_lyrics">No lyrics found</string>
  <string name="no_results_found">Sorry could not find any results for your search!</string>
  <string name="non_album_tracks">Non album tracks</string>
  <string name="notification__session_channel_description">Used to display the media control notification.</string>
  <string name="notification__session_channel_name">MusicBee Remote Session</string>
  <string name="notification__sync_description">Library metadata sync in progress</string>
  <string name="notification__sync_title">Library Sync</string>
  <string name="notification__sync_progress_albums">Albums (%1$d/%2$d)</string>
  <string name="notification__sync_progress_artists">Artists (%1$d/%2$d)</string>
  <string name="notification__sync_progress_covers">Covers (%1$d/%2$d)</string>
  <string name="notification__sync_progress_genres">Genres (%1$d/%2$d)</string>
  <string name="now_playing_search">Search</string>
  <string name="plugin_update__description">It seems that you have connected to an older version of the plugin.\n\nSome features will not function properly unless you update the plugin to %1$s.</string>
  <string name="plugin_update__title">Plugin Update Required</string>
  <string name="pref_key_build_time">build_time_key</string>
  <string name="pref_key_revision">revision_key</string>
  <string name="preferences_about_version">MusicBee Remote Version</string>
  <string name="preferences_category_about">About MusicBee Remote</string>
  <string name="preferences_key_connection_manager">manage_connections</string>
  <string name="preferences_open_source">open_source</string>
  <string name="rate_the_playing_track">Rate the playing track</string>
  <string name="setting_miscellaneous_debug_logging">Debug Logging</string>
  <string name="setting_miscellaneous_debug_logging_summary">Enables debug logging for the application. May cause performance degradation since it logs everything.</string>
  <string name="setting_miscellaneous_plugin_updates">Plugin Update Check</string>
  <string name="setting_miscellaneous_plugin_updates_summary">Periodically check for updated versions of the plugin</string>
  <string name="settings_connection">Connection Settings</string>
  <string name="settings_dialog__name_placeholder">My Computer</string>
  <string name="settings_dialog_hint_host">Hostname / IP</string>
  <string name="settings_dialog_hint_name">Computer name</string>
  <string name="settings_dialog_hint_port">Port number</string>
  <string name="settings_key_debug_logging">settings_debug_log</string>
  <string name="settings_key_incoming_call_action">incoming_call_action</string>
  <string name="settings_key_license">mbrc_license</string>
  <string name="settings_key_plugin_check">plugin_update_check</string>
  <string name="settings_manage_connections">Manage Connections</string>
  <string name="settings_miscellaneous">Miscellaneous</string>
  <string name="settings_miscellaneous_incoming_call_action">Incoming call action</string>
  <string name="settings_miscellaneous_incoming_call_description">Default action on incoming call \n\nRequires permission to read the Phone State.</string>
  <string name="settings_oss_license">Open source license</string>
  <string name="settings_title_license">License</string>
  <string name="settings_version">settings_version</string>
  <string name="settings_version_number">v%1$s</string>
  <string name="update_required__content_description">Update icon</string>
</resources>