<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

  <group android:checkableBehavior="single">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/nav_home" />

    <item
        android:id="@+id/nav_search"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/nav_search" />

    <item
        android:id="@+id/nav_now_playing"
        android:icon="@drawable/ic_view_list_black_24dp"
        android:title="@string/nav_now_playing" />

    <item
        android:id="@+id/nav_playlists"
        android:icon="@drawable/ic_queue_music_black_24dp"
        android:title="@string/nav_playlists"
        />

    <item
        android:id="@+id/nav_lyrics"
        android:icon="@drawable/ic_view_headline_black_24dp"
        android:title="@string/nav_lyrics" />

  </group>

  <item android:title="@string/nav_option_title">
    <menu>
      <item
          android:id="@+id/nav_settings"
          android:icon="@drawable/ic_settings_black_24dp"
          android:title="@string/nav_settings" />

      <item
          android:id="@+id/nav_help"
          android:icon="@drawable/ic_help_black_24dp"
          android:title="@string/nav_help" />

      <item
          android:id="@+id/nav_feedback"
          android:icon="@drawable/ic_chat_black_24dp"
          android:title="@string/nav_feedback" />
      <item
          android:id="@+id/nav_exit"
          android:icon="@drawable/ic_close_black_24dp"
          android:title="@string/nav_exit" />
    </menu>
  </item>


</menu>
