<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/tools"
      xmlns:mbrc="http://schemas.android.com/apk/res-auto">
  <item
    android:id="@+id/library_search_item"
    android:icon="@drawable/ic_search_black_24dp"
    android:title="@string/now_playing_search"
    mbrc:actionViewClass="android.support.v7.widget.SearchView"
    mbrc:showAsAction="always"/>
  <item
    android:id="@+id/library_refresh_item"
    android:icon="@drawable/ic_refresh_black_24dp"
    android:title="@string/library_actionbar_refresh"
    app:showAsAction="ifRoom"/>

  <item
    android:id="@+id/library_album_artist"
    android:checkable="true"
    android:checked="false"
    android:title="@string/library_album_artists_only"
    app:showAsAction="never"/>

</menu>
