<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <com.google.android.material.textfield.TextInputLayout
    android:id="@+id/settings_name_wrapper"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="8dp"
    app:layout_constraintBottom_toTopOf="@+id/settings_dialog_port_wrapper"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.0">

    <EditText
      android:id="@+id/settings_dialog_name"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:hint="@string/settings_dialog_hint_name"
      android:inputType="text"
      android:text="@string/settings_dialog__name_placeholder" />
  </com.google.android.material.textfield.TextInputLayout>

  <com.google.android.material.textfield.TextInputLayout
    android:id="@+id/settings_dialog_host_wrapper"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="8dp"
    app:layout_constraintBottom_toBottomOf="@+id/settings_dialog_port_wrapper"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/settings_name_wrapper"
    app:layout_constraintVertical_bias="0.0">

    <EditText
      android:id="@+id/settings_dialog_host"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:hint="@string/settings_dialog_hint_host"
      android:inputType="text" />
  </com.google.android.material.textfield.TextInputLayout>

  <com.google.android.material.textfield.TextInputLayout
    android:id="@+id/settings_dialog_port_wrapper"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="8dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/settings_dialog_host_wrapper">

    <EditText
      android:id="@+id/settings_dialog_port"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:hint="@string/settings_dialog_hint_port"
      android:inputType="number"
      android:maxLength="5"
      android:text="@string/default_port" />
  </com.google.android.material.textfield.TextInputLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
