<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="@dimen/widget_small_height"
  android:background="?android:attr/colorBackground"
  android:gravity="top"
  android:orientation="horizontal"
  android:padding="0dp"
  android:theme="@style/WidgetTheme"
  tools:ignore="NestedWeights,Overdraw">

  <ImageView
    android:id="@+id/widget_small_image"
    android:layout_width="@dimen/widget_small_height"
    android:layout_height="@dimen/widget_small_height"
    android:background="@drawable/ic_image_no_cover"
    android:contentDescription="@string/description_album_cover"
    android:scaleType="centerInside" />

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="@dimen/widget_small_height"
    android:orientation="vertical">

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:layout_gravity="fill"
      android:layout_marginTop="2dp"
      android:layout_weight="0.8"
      android:focusable="true"
      android:gravity="center_vertical"
      android:orientation="horizontal"
      android:paddingLeft="@dimen/small_margin"
      android:paddingRight="@dimen/small_margin">

      <TextView
        android:id="@+id/widget_small_line_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ellipsize="none"
        android:maxLines="1"
        android:textColor="?attr/colorOnSurface"
        android:textSize="@dimen/widget_small_text"
        android:textStyle="bold"
        tools:text="Rock it for me" />

      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/small_margin"
        android:paddingRight="@dimen/small_margin"
        android:text="@string/dash"
        android:textColor="?attr/colorOnSurfaceVariant"
        android:textSize="@dimen/widget_small_text" />

      <TextView
        android:id="@+id/widget_small_line_two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ellipsize="marquee"
        android:maxLines="1"
        android:textColor="?attr/colorOnSurfaceVariant"
        android:textSize="@dimen/widget_small_text"
        tools:text="Caravan Palace" />

    </LinearLayout>

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:layout_gravity="fill_horizontal|center_vertical"
      android:layout_weight="1"
      android:focusable="true"
      android:gravity="center_horizontal"
      android:orientation="horizontal">

      <ImageButton
        android:id="@+id/widget_small_previous"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="?attr/colorSurface"
        android:contentDescription="@string/main_button_previous_description"
        android:focusable="true"
        android:padding="0dp"
        android:scaleType="centerInside"
        android:src="@drawable/baseline_skip_previous_24"
        app:tint="?attr/colorOnSurface" />

      <ImageButton
        android:id="@+id/widget_small_play"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="?attr/colorSurface"
        android:contentDescription="@string/main_button_play_pause_description"
        android:focusable="true"
        android:padding="0dp"
        android:scaleType="centerInside"
        android:src="@drawable/baseline_play_arrow_24"
        app:tint="?attr/colorOnSurface" />

      <ImageButton
        android:id="@+id/widget_small_next"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="?attr/colorSurface"
        android:contentDescription="@string/main_button_next_description"
        android:focusable="true"
        android:padding="0dp"
        android:scaleType="centerInside"
        android:src="@drawable/baseline_skip_next_24"
        app:tint="?attr/colorOnSurface" />

    </LinearLayout>

  </LinearLayout>

</LinearLayout>
