<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <com.google.android.material.textfield.TextInputLayout
    android:id="@+id/settings_dialog__name_input"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <EditText
      android:id="@+id/settings_dialog__name_edit"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:hint="@string/settings_dialog_hint_name" />
  </com.google.android.material.textfield.TextInputLayout>

  <com.google.android.material.textfield.TextInputLayout
    android:id="@+id/settings_dialog__hostname_input"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/settings_dialog__name_input">

    <EditText
      android:id="@+id/settings_dialog__hostname_edit"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:hint="@string/settings_dialog_hint_host"  />
  </com.google.android.material.textfield.TextInputLayout>

  <com.google.android.material.textfield.TextInputLayout
    android:id="@+id/settings_dialog__port_input"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/settings_dialog__hostname_input">

    <EditText
      android:id="@+id/settings_dialog__port_edit"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:hint="@string/settings_dialog_hint_port"
      android:inputType="number"
      android:maxLength="5"/>
  </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
