<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".UpdateRequiredActivity">

  <Button
    android:id="@+id/main_update_ok"
    style="?android:attr/buttonBarButtonStyle"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:text="@android:string/ok"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent" />

  <ImageView
    android:id="@+id/main_update_icon"
    android:layout_width="56dp"
    android:layout_height="56dp"
    android:contentDescription="@string/update_required__content_description"
    android:src="@drawable/baseline_system_update_alt_24"
    app:layout_constraintBottom_toTopOf="@id/main_update_title"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.2"
    app:tint="?attr/colorPrimary" />

  <TextView
    android:id="@+id/main_update_text"
    style="@style/TextAppearance.MaterialComponents.Body1"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"
    android:text="@string/plugin_update__description"
    app:layout_constraintBottom_toTopOf="@id/main_update_ok"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/main_update_title"
    app:layout_constraintVertical_bias="0.1" />

  <TextView
    android:id="@+id/main_update_title"
    style="@style/TextAppearance.MaterialComponents.Headline5"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"
    android:text="@string/plugin_update__title"
    app:layout_constraintBottom_toBottomOf="@id/main_update_text"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/main_update_icon"
    app:layout_constraintVertical_bias="0.01" />

</androidx.constraintlayout.widget.ConstraintLayout>
